--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ chrono = { version = "0.4.41", features = ["serde"] }
 markdown = "1.0.0"
 markdown-frontmatter = "0.4.0"
 minijinja = "2.12.0"
+rss = "2.0.12"
 serde = "1.0.219"
 tokio = { version = "1.47.1", features = ["full"] }
+toml = "0.9.7"
 tower-http = { version = "0.6.6", features = ["fs"] }
